Add a full repaint after the animation

BUG: 198986

svn path=/trunk/KDE/kdebase/workspace/; revision=1001777